--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,8 +19,6 @@ android {
     buildToolsVersion "28.0.3"
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -42,5 +40,5 @@ repositories {
 dependencies {
     implementation 'com.facebook.react:react-native:+'
     implementation 'com.singular.sdk:singular_sdk:12.1.3'
-    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'androidx.annotation:annotation:1.6.0'
 }
