--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,14 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral {
+            // We don't want to fetch react-native from Maven Central as there are
+            // older versions over there.
+            content {
+                excludeGroup "com.facebook.react"
+            }
+        }
+        maven { url 'https://jitpack.io' }
     }
 
     dependencies {
@@ -40,5 +47,5 @@ repositories {
 dependencies {
     implementation 'com.facebook.react:react-native:+'
     implementation 'com.singular.sdk:singular_sdk:12.1.3'
-    implementation 'androidx.annotation:annotation:1.6.0'
+    implementation 'androidx.annotation:annotation:1.5.0'
 }
